# OfflineMessageBot

./: CMakeLists.txt  LICENSE  README.md  general_proto.sh
conf/: config.ini  nodes.json
doc/: db_tok.sql
src/: assisant.cc  assisant.h  bot.cc  bot.h  conf.cc  conf.h  db_conn.cc  db_conn.h  lock.h  locked_queue.h  logger.cc  logger.h  main.cc  message.proto  offline_message.cc  offline_message.h  offline_message_model.cc  offline_message_model.h  util.cc  util.h
src/generate/: message.pb.cc  message.pb.h
